--- a/labs/Лабораторная работа №7.md
+++ b/labs/Лабораторная работа №7.md
@@ -1,1 +1,71 @@
-фывфывыфвыфвылофдлпдва
+МИНИСТЕРСТВО НАУКИ  И ВЫСШЕГО ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ  
+Федеральное государственное автономное образовательное учреждение высшего образования  
+"КРЫМСКИЙ ФЕДЕРАЛЬНЫЙ УНИВЕРСИТЕТ им. В. И. ВЕРНАДСКОГО"  
+ФИЗИКО-ТЕХНИЧЕСКИЙ ИНСТИТУТ  
+Кафедра компьютерной инженерии и моделирования
+<br/><br/>
+ 
+### Отчёт по лабораторной работе № 7<br/> по дисциплине "Программирование"
+<br/>
+ 
+студента 1 курса группы ПИ-б-о-192(2)  
+Залатова Василия Александровича  
+направления подготовки 09.03.04 "Программная инженерия"  
+<br/>
+ 
+<table>
+<tr><td>Научный руководитель<br/> старший преподаватель кафедры<br/> компьютерной инженерии и моделирования</td>
+<td>(оценка)</td>
+<td>Чабанов В.В.</td>
+</tr>
+</table>
+<br/><br/>
+ 
+Симферополь, 2019
+
+
+### Цель: изучить основные возможности создания и отладки программ в IDE Qt Creator.
+
+1. Как создать консольное приложение С++ в IDE Qt Creator без использования компонентов Qt?</br>
+  Необходимо открыть QT Creator, затем:<br>
+  Проекты -> Создать -> Приложение -> Консольное приложение QT, либо -> Проект без QT -> Приложение на языке C++
+  Рис 1.1, Рис 1.2, Рис 1.3<br>
+  ![](/7lab/img_1.jpg "test")
+2. Как изменить цветовую схему (оформление) среды?
+  Необходимо нажать на меню Инструменты -> Параметры -> Среда, после чего выбирать темы.
+3. Как закомментировать/раскомментировать блок кода средствами Qt Creator?
+  С помощью сочетания клавиш CTRL + / 
+4. Как открыть в проводнике Windows папку с проектом средствами Qt Creator?
+Необходимо нажать на любой файл в проекте правой кнопкой мыши -> показать в проводнике.
+5. Какое расширение файла-проекта используется Qt Creator?
+.pro
+6. Как запустить код без отладки?
+CTRL + R, либо значок зелёной стрелочки.
+7. Как запустить код в режиме отладки?
+Зелёная стрелочка с жуком :) Либо F5
+8. Как установить/убрать точку останова (breakpoint)?
+F9
+9. Создайте программу со следующим кодом:
+</textarea></div>
+      <div class="crayon-main" style="position: relative; z-index: 1; overflow: hidden;">
+        <table class="crayon-table" style="">
+          <tbody><tr class="crayon-row">
+        <td class="crayon-nums " data-settings="show">
+          <div class="crayon-nums-content" style="font-size: 12px !important; line-height: 15px !important;"><div class="crayon-num" data-line="crayon-5e4d633787600825781143-1">1</div><div class="crayon-num crayon-striped-num" data-line="crayon-5e4d633787600825781143-2">2</div><div class="crayon-num" data-line="crayon-5e4d633787600825781143-3">3</div><div class="crayon-num crayon-striped-num" data-line="crayon-5e4d633787600825781143-4">4</div><div class="crayon-num" data-line="crayon-5e4d633787600825781143-5">5</div><div class="crayon-num crayon-striped-num" data-line="crayon-5e4d633787600825781143-6">6</div><div class="crayon-num" data-line="crayon-5e4d633787600825781143-7">7</div><div class="crayon-num crayon-striped-num" data-line="crayon-5e4d633787600825781143-8">8</div><div class="crayon-num" data-line="crayon-5e4d633787600825781143-9">9</div></div>
+        </td>
+            <td class="crayon-code"><div class="crayon-pre" style="font-size: 12px !important; line-height: 15px !important; -moz-tab-size:4; -o-tab-size:4; -webkit-tab-size:4; tab-size:4;"><div class="crayon-line" id="crayon-5e4d633787600825781143-1"><span class="crayon-p">#include &lt;iostream&gt;</span></div><div class="crayon-line crayon-striped-line" id="crayon-5e4d633787600825781143-2"><span class="crayon-t">int</span><span class="crayon-h"> </span><span class="crayon-e">main</span><span class="crayon-sy">(</span><span class="crayon-sy">)</span><span class="crayon-h"> </span><span class="crayon-sy">{</span></div><div class="crayon-line" id="crayon-5e4d633787600825781143-3"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-t">int</span><span class="crayon-h"> </span><span class="crayon-v">i</span><span class="crayon-sy">;</span></div><div class="crayon-line crayon-striped-line" id="crayon-5e4d633787600825781143-4"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-t">double</span><span class="crayon-h"> </span><span class="crayon-v">d</span><span class="crayon-sy">;</span></div><div class="crayon-line" id="crayon-5e4d633787600825781143-5"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-v">i</span><span class="crayon-h"> </span><span class="crayon-o">=</span><span class="crayon-h"> </span><span class="crayon-cn">5</span><span class="crayon-sy">;</span></div><div class="crayon-line crayon-striped-line" id="crayon-5e4d633787600825781143-6"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-v">d</span><span class="crayon-h"> </span><span class="crayon-o">=</span><span class="crayon-h"> </span><span class="crayon-cn">5</span><span class="crayon-sy">;</span></div><div class="crayon-line" id="crayon-5e4d633787600825781143-7"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-v">std</span><span class="crayon-o">::</span><span class="crayon-r">cout</span><span class="crayon-h"> </span><span class="crayon-o">&lt;&lt;</span><span class="crayon-h"> </span><span class="crayon-v">i</span><span class="crayon-h"> </span><span class="crayon-o">&lt;&lt;</span><span class="crayon-h"> </span><span class="crayon-v">d</span><span class="crayon-sy">;</span></div><div class="crayon-line crayon-striped-line" id="crayon-5e4d633787600825781143-8"><span class="crayon-h">&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="crayon-st">return</span><span class="crayon-h"> </span><span class="crayon-cn">0</span><span class="crayon-sy">;</span></div><div class="crayon-line" id="crayon-5e4d633787600825781143-9"><span class="crayon-sy">}</span></div></div></td>
+          </tr>
+        </tbody></table>
+      </div>
+    </div>
+    
+* Переключитесь в конфигурацию сборки «Отладка»;
+* Установите breakpoint на 5, 6 и 7 строках;
+* Запустите приложение щелкнув по кнопке с изображением жука .
+* Используйте эту же кнопку для перехода к следующей точке останова;
+* Какое значение содержит переменная i в 5й строке?
+  Значение 0.
+* Какое значение содержит переменная d в 6й строке?
+  
+* Какие значение содержатся в переменных i и  d в 7й строке?
+* Совпадают ли эти значения с теми, что вы получали в MSVS для соответствующих типов?
