--- a/labs/Лабораторная работа №7.md
+++ b/labs/Лабораторная работа №7.md
@@ -28,23 +28,38 @@
 
 1. Как создать консольное приложение С++ в IDE Qt Creator без использования компонентов Qt?</br>
   Необходимо открыть QT Creator, затем:<br>
-  Проекты -> Создать -> Приложение -> Консольное приложение QT, либо -> Проект без QT -> Приложение на языке C++
-  Рис 1.1, Рис 1.2, Рис 1.3<br>
-  ![](/7lab/img_1.jpg "test")
+  `Проекты -> Создать -> Приложение -> Консольное приложение QT`, либо ` Проект без QT -> Приложение на языке C++`
+  Рис 1.1, Рис 1.2, Рис 1.3<br><br>
+  ![](https://sun9-47.userapi.com/c857128/v857128488/e8a62/UbwN0jpdiuQ.jpg)<br>
+   Рисунок 1. Создание проекта QT.<br><br>
+  ![](https://sun9-65.userapi.com/c857128/v857128488/e8a74/UZUlz9fxhRI.jpg)
+  <br> Рисунок 1.2 Создание консольного приложения QT.<br><br>
 2. Как изменить цветовую схему (оформление) среды?
-  Необходимо нажать на меню Инструменты -> Параметры -> Среда, после чего выбирать темы.
-3. Как закомментировать/раскомментировать блок кода средствами Qt Creator?
-  С помощью сочетания клавиш CTRL + / 
-4. Как открыть в проводнике Windows папку с проектом средствами Qt Creator?
-Необходимо нажать на любой файл в проекте правой кнопкой мыши -> показать в проводнике.
+  Необходимо нажать на меню `Инструменты -> Параметры -> Среда`, после чего выбирать темы.<br>
+  ![](https://sun9-58.userapi.com/c857128/v857128488/e8a90/FhDwF9PsF-E.jpg)
+  <br><br>
+  ![](https://sun9-50.userapi.com/c857128/v857128488/e8aa2/GbsJhVmxDpY.jpg)
+<br><br>
+3. Как закомментировать/раскомментировать блок кода средствами Qt Creator?<br>
+  С помощью сочетания клавиш `CTRL + /`
+4. Как открыть в проводнике Windows папку с проектом средствами Qt Creator?<br>
+Необходимо нажать на любой файл в проекте правой кнопкой мыши -> показать в проводнике.<br>
+![](https://sun9-15.userapi.com/c857128/v857128488/e8b1e/l5LyG0nXO2Y.jpg)
+<br><br>
 5. Какое расширение файла-проекта используется Qt Creator?
-.pro
-6. Как запустить код без отладки?
-CTRL + R, либо значок зелёной стрелочки.
-7. Как запустить код в режиме отладки?
-Зелёная стрелочка с жуком :) Либо F5
+`.pro`<br>
+![](https://sun9-38.userapi.com/c857128/v857128488/e8b2e/YqCqBWkRcPY.jpg)
+
+6. Как запустить код без отладки?<br>
+`CTRL + R`, либо значок зелёной стрелочки.<br>
+![](https://sun9-3.userapi.com/c857128/v857128488/e8b35/e_SDpHksgZ4.jpg)
+<br><br>
+7. Как запустить код в режиме отладки?<br>
+Зелёная `стрелочка с жуком` :) Либо F5<br>
+![](https://sun9-3.userapi.com/c857128/v857128488/e8b35/e_SDpHksgZ4.jpg)
+<br><br>
 8. Как установить/убрать точку останова (breakpoint)?
-F9
+`F9`
 9. Создайте программу со следующим кодом:
 </textarea></div>
       <div class="crayon-main" style="position: relative; z-index: 1; overflow: hidden;">
@@ -58,14 +73,21 @@ F9
         </tbody></table>
       </div>
     </div>
-    
+   
 * Переключитесь в конфигурацию сборки «Отладка»;
 * Установите breakpoint на 5, 6 и 7 строках;
 * Запустите приложение щелкнув по кнопке с изображением жука .
 * Используйте эту же кнопку для перехода к следующей точке останова;
 * Какое значение содержит переменная i в 5й строке?
   Значение 0.
-* Какое значение содержит переменная d в 6й строке?
-  
+* Какое значение содержит переменная d в 6й строке?<br>
+ ![](https://sun9-61.userapi.com/c857128/v857128585/eb534/BkEUA1uJ_gI.jpg)<br>
 * Какие значение содержатся в переменных i и  d в 7й строке?
-* Совпадают ли эти значения с теми, что вы получали в MSVS для соответствующих типов?
+5 и 5
+* Совпадают ли эти значения с теми, что вы получали в MSVS для соответствующих типов? Да, совпадают.
+
+15. Открываем файл main.cpp -> ЛКМ на `calc.show();` -> Жмём F1.
+![](https://sun9-36.userapi.com/c857128/v857128585/eb56e/TasS0noWYME.jpg)
+16. Формы -> Выбираем файл с расширением .ui, в нём будет возможность редактировать внешний вид нашего приложения.
+
+Вывод: получены навыки создания проекта в среде QT. Также получены навыки использования некоторых горячих клавиш.
