--- a/labs/Лабораторная работа №7.md
+++ b/labs/Лабораторная работа №7.md
@@ -37,9 +37,9 @@
 2. Как изменить цветовую схему (оформление) среды?
   Необходимо нажать на меню `Инструменты -> Параметры -> Среда`, после чего выбирать темы.<br>
   ![](https://sun9-58.userapi.com/c857128/v857128488/e8a90/FhDwF9PsF-E.jpg)
-  <br><br>
+  <br>Рисунок 2. Смена оформления, этап 1.<br>
   ![](https://sun9-50.userapi.com/c857128/v857128488/e8aa2/GbsJhVmxDpY.jpg)
-<br><br>
+<br>Рисунок 2.1 Смена оформления, этап 2<br>
 3. Как закомментировать/раскомментировать блок кода средствами Qt Creator?<br>
   С помощью сочетания клавиш `CTRL + /`
 4. Как открыть в проводнике Windows папку с проектом средствами Qt Creator?<br>
@@ -48,16 +48,16 @@
 <br><br>
 5. Какое расширение файла-проекта используется Qt Creator?
 `.pro`<br>
-![](https://sun9-38.userapi.com/c857128/v857128488/e8b2e/YqCqBWkRcPY.jpg)
+![](https://sun9-38.userapi.com/c857128/v857128488/e8b2e/YqCqBWkRcPY.jpg)<br>Рисунок 3. Расширение проекта
 
 6. Как запустить код без отладки?<br>
 `CTRL + R`, либо значок зелёной стрелочки.<br>
 ![](https://sun9-3.userapi.com/c857128/v857128488/e8b35/e_SDpHksgZ4.jpg)
-<br><br>
+<br>Рисунок 4. Запуск кода без отладки<br>
 7. Как запустить код в режиме отладки?<br>
 Зелёная `стрелочка с жуком` :) Либо F5<br>
 ![](https://sun9-3.userapi.com/c857128/v857128488/e8b35/e_SDpHksgZ4.jpg)
-<br><br>
+<br>Рисунок 5. Запуск кода с отладкой.<br>
 8. Как установить/убрать точку останова (breakpoint)?
 `F9`
 9. Создайте программу со следующим кодом:
@@ -81,13 +81,13 @@
 * Какое значение содержит переменная i в 5й строке?
   Значение 0.
 * Какое значение содержит переменная d в 6й строке?<br>
- ![](https://sun9-61.userapi.com/c857128/v857128585/eb534/BkEUA1uJ_gI.jpg)<br>
+ ![](https://sun9-61.userapi.com/c857128/v857128585/eb534/BkEUA1uJ_gI.jpg)<br>Рисунок 6. Значение переменной
 * Какие значение содержатся в переменных i и  d в 7й строке?
 5 и 5
 * Совпадают ли эти значения с теми, что вы получали в MSVS для соответствующих типов? Да, совпадают.
 
 15. Открываем файл main.cpp -> ЛКМ на `calc.show();` -> Жмём F1.
-![](https://sun9-36.userapi.com/c857128/v857128585/eb56e/TasS0noWYME.jpg)
+![](https://sun9-36.userapi.com/c857128/v857128585/eb56e/TasS0noWYME.jpg)<br> Рисунок 7. Справка по ф-ции `show();`
 16. Формы -> Выбираем файл с расширением .ui, в нём будет возможность редактировать внешний вид нашего приложения.
 
 Вывод: получены навыки создания проекта в среде QT. Также получены навыки использования некоторых горячих клавиш.
