Update Лабораторная работа №7.md

--- a/labs/Лабораторная работа №7.md
+++ b/labs/Лабораторная работа №7.md
@@ -88,6 +88,6 @@
 
 15. Открываем файл main.cpp -> ЛКМ на `calc.show();` -> Жмём F1.
 ![](https://sun9-36.userapi.com/c857128/v857128585/eb56e/TasS0noWYME.jpg)<br> Рисунок 7. Справка по ф-ции `show();`
-16. Формы -> Выбираем файл с расширением .ui, в нём будет возможность редактировать внешний вид нашего приложения.
+16. Формы -> Выбираем файл с расширением .ui, в нём будет возможность редактировать внешний вид нашего приложения.<br>
 ![](https://github.com/zalatoff/programming/blob/master/labs/7lab/img11.png?raw=true)<br>Рисунок 8. Видоизменённое приложение<br>
 Вывод: получены навыки создания проекта в среде QT. Также получены навыки использования некоторых горячих клавиш.
