Update Лабораторная работа №4.md

--- a/labs/Лабораторная работа №4.md
+++ b/labs/Лабораторная работа №4.md
@@ -286,3 +286,6 @@ bool updateGame(Game* game)
   return true;
 }
 ```
+<br>
+###Вывод: Закреплены навыки работы с енумераторами, структурами, освоены методы составления многофайловых программ.
+* Освоить методы составления многофайловых программ.
