Update Лабораторная работа №4.md

--- a/labs/Лабораторная работа №4.md
+++ b/labs/Лабораторная работа №4.md
@@ -285,4 +285,4 @@ bool updateGame(Game* game)
 }
 ```
 <br>
-***Вывод: Закреплены навыки работы с енумераторами, структурами, освоены методы составления многофайловых программ.
+**Вывод: Закреплены навыки работы с енумераторами, структурами, освоены методы составления многофайловых программ.
