--- a/labs/Лабораторная работа №4.md
+++ b/labs/Лабораторная работа №4.md
@@ -32,7 +32,7 @@
 
 ### Реализация: <br>
 #### main.cpp <br>
-```C++
+```
 #include <iostream>
 #include "game_func.h"
 using namespace std;
@@ -56,8 +56,9 @@ int main()
     else cout << "Ничья!";
 }
 ```
+</br><br>
 #### game_func.h
-```C++
+```
 #pragma once
 
   enum Status {
@@ -80,6 +81,7 @@ int main()
   void userTurn(Game* game);
   bool updateGame(Game* game);
 ``` 
+
 #### game_func.cpp
 ```C++
 #include "game_func.h"
@@ -284,5 +286,4 @@ bool updateGame(Game* game)
   return true;
 }
 ```
-<br>
-Вывод: Закреплены навыки работы с енумераторами, структурами, освоены методы составления многофайловых программ.
+**Вывод:** Закреплены навыки работы с енумераторами, структурами, освоены методы составления многофайловых программ.
