Update Лабораторная работа №5.md

--- a/labs/Лабораторная работа №5.md
+++ b/labs/Лабораторная работа №5.md
@@ -51,6 +51,127 @@ struct Passenger{
     Embarked embarked;
 };
 ``` 
+```C++
+int main()
+{
+    setlocale(LC_ALL, "Russian");
+    std::ifstream fin("train1.csv");
+
+    	if (!fin)
+    {
+        std::cout << "Uh oh, something went wrong!";
+        exit(1);
+    }
+
+    std::ofstream fout("File1.txt");
+    std::string line;
+    readuntil(fin, '\r');  //Пропускаем первую строчку файла (заголовки для таблицы);
+
+    while (true) {
+
+        end = -1;  //сбрасываем readuntil в начало (спец. для каждой строки)
+
+        line = readuntil(fin, '\r');
+        	if (line == "") break;
+        Passenger p;
+        p.id = std::stoi(readuntilstr(line, ",")); // stoi - преобразование строки в числовое значение (int)
+        p.survival = std::stoi(readuntilstr(line, ","));
+        p.pclass = (Pclass)std::stoi(readuntilstr(line, ",\""));
+        p.name = readuntilstr(line, "\",");
+        p.sex = readuntilstr(line, ",") == "male" ? Sex::Male : Sex::Female;
+
+        std::string ag = readuntilstr(line, ",");
+        	if (ag == "") p.age = -1;
+        	else p.age = std::stod(ag);
+
+        p.sibsp = std::stoi(readuntilstr(line, ","));
+        p.parch = std::stoi(readuntilstr(line, ","));
+        p.ticket = readuntilstr(line, ",");
+        p.fare = std::stod(readuntilstr(line, ",")); 
+        p.cabin = readuntilstr(line, ",");
+
+        std::string em = readuntilstr(line, ",");
+        	if (em == "C") p.embarked = Embarked::C;
+        	else if (em == "Q") p.embarked = Embarked::Q;
+        	else p.embarked = Embarked::S;
+
+        passengers.push_back(p); // добавление заполненой структуры пассажира в вектор
+    }
+
+   int calive = 0,
+        fclass = 0,
+        sclass = 0,
+        thclass = 0,
+        female = 0,
+        male = 0;
+    double average_age = 0;
+    int female_all = 0,
+        male_all = 0;
+    double average_female = 0, // сред. жен. возраст
+           average_male = 0; // сред. муж. возраст
+    int shtat[3]{};
+    int age_all = 0;
+    Embarked shtat_max = C;
+
+    for (int i = 0; i < passengers.size(); i++) {
+        if (passengers[i].survival) {
+            calive++;
+            	if (passengers[i].pclass == Pclass::First) fclass++;
+            	else if (passengers[i].pclass == Pclass::Second) sclass++;
+            	else thclass++;
+				
+            	if (passengers[i].sex == Sex::Female) female++;
+            	else male++;
+        };
+        if (passengers[i].age != -1) {
+            average_age += passengers[i].age;
+            age_all++;
+            	if (passengers[i].sex == Sex::Female) {
+            		female_all++;
+                	average_female += passengers[i].age;
+            	}
+            	else {
+                	male_all++;
+                	average_male += passengers[i].age;
+            	}
+        }
+        
+		shtat[passengers[i].embarked]++;
+        
+      	if (passengers[i].age < 18 && passengers[i].age!=-1) children.push_back(passengers[i].id);
+  }
+    average_age /= age_all; 
+    average_female /= female_all; 
+    average_male /= male_all; 
+	
+    	if (shtat[shtat_max] < shtat[Q]) shtat_max = Q; // Максимальный штат 
+    	if (shtat[shtat_max] < shtat[S]) shtat_max = S;
+
+    fout << "Общее число выживших:" << calive << '\n'
+        << "Число выживших из 1 класса:" << fclass << '\n'
+        << "Число выживших из 2 класса:" << sclass << '\n'
+        << "Число выживших из 3 класса:" << thclass << '\n'
+        << "Количество выживших женщин:" << female << '\n'
+        << "Количество выживших мужчин:" << male << '\n'
+        << "Средний возраст пассажира:" << average_age << '\n'
+        << "Средний женский возраст:" << average_female << '\n'
+        << "Средний мужской возраст:" << average_male << '\n'
+        << "Штат, в котором село больше всего пассажиров:" << shtatw(shtat_max) << '\n'
+		<< "Список идентификаторов несовершеннолетних (младше 18) пассажиров:" << '\n';
+    
+    for (int i = 0; i < children.size(); i++) {
+        if (i == children.size() - 1) {
+            fout << children[i];
+            break;
+        }
+		
+        fout << children[i] << ",";
+    }
+    
+    fout.close();
+    fin.close();
+}
+```
 Все рассчитанные характеристики в виде таблицы:<br>
 | **Характеристика**  | **Результат**   |
 | ------------ | ------------ |
