--- a/labs/Лабораторная работа №3.md
+++ b/labs/Лабораторная работа №3.md
@@ -33,7 +33,7 @@
 1. Для работы с изображением, была установлена [данная](https://github.com/marc-q/libbmp) библиотека.
 2. После установки были произведены некоторые манипуляции, связанные с установкой данной библиотеки, а именно, нажатием правой кнопки мыши был добавлен файл libbmp.cpp в проект.<br>![](https://sun9-27.userapi.com/-4cDLHTa92A_6WMgcd5xOoKjY70xDw66bzEBDQ/G9mh-sn_5XI.jpg)
 3. После, открыв свойства проекта, была добавлена папка *include* <br>![](https://sun1.43222.userapi.com/bhLqy0-_H-f5K1WPO12F6mTzpsWU3WfrWwZpgQ/uuiEFBT9Jt4.jpg)
-4. Мой вариант изображения - ***3***, ключ - ``` *00r 00g 00b 01r 01g 01b 10r 10g*```.<br>![](https://neroid.ru/wp-content/uploads/2020/02/pic3.bmp) </br>
+4. Номер исследуемого изображения - ***3***, ключ - ``` *00r 00g 00b 01r 01g 01b 10r 10g*```.<br>![](https://neroid.ru/wp-content/uploads/2020/02/pic3.bmp) </br>
 Код программы:
 ```C++
 
