Update Лабораторная работа №5.md

--- a/labs/Лабораторная работа №5.md
+++ b/labs/Лабораторная работа №5.md
@@ -52,6 +52,58 @@ struct Passenger{
 };
 ``` 
 ```C++
+#include <iostream>
+#include<vector>
+#include<fstream>
+#include<string>
+
+enum class Pclass {First=1, Second, Third};
+enum class Sex { Male, Female };
+enum Embarked { C, Q, S };
+
+struct Passenger{
+    int id;
+    bool survival;
+    Pclass pclass;
+    std::string name;
+    Sex sex;
+    double age;
+    short int sibsp, 
+              parch;
+    std::string ticket;
+    double fare;
+    std::string cabin;
+    Embarked embarked;
+};
+
+std::vector<Passenger> passengers;
+std::vector<int> children;
+
+std::string readuntil(std::ifstream& fin, char end = '\r') {  
+    std::string s = "";
+    char buffer;
+    while (fin.read(&buffer, 1)) {
+        if (buffer != end) s += buffer;
+        else break;
+    }
+    return s;
+}
+
+int end = -1; // сохраняет последнюю позицию в строке
+int lastEndSize = 1; // сохраняет кол-во знаков
+
+std::string readuntilstr(std::string str, std::string endStr) {  
+    int begin = end + lastEndSize;
+    end = str.find(endStr, begin);
+    lastEndSize = endStr.size();
+    return str.substr(begin, end - begin);
+}
+
+std::string shtatw(Embarked max) { 
+    if (max == 0)  return "C";
+    else if (max == 1) return "Q";
+    else return "S";
+}
 int main()
 {
     setlocale(LC_ALL, "Russian");
@@ -65,16 +117,16 @@ int main()
 
     std::ofstream fout("File1.txt");
     std::string line;
-    readuntil(fin, '\r');  //Пропускаем первую строчку файла (заголовки для таблицы);
+    readuntil(fin, '\r');  
 
     while (true) {
 
-        end = -1;  //сбрасываем readuntil в начало (спец. для каждой строки)
+        end = -1;  
 
         line = readuntil(fin, '\r');
         	if (line == "") break;
         Passenger p;
-        p.id = std::stoi(readuntilstr(line, ",")); // stoi - преобразование строки в числовое значение (int)
+        p.id = std::stoi(readuntilstr(line, ","));
         p.survival = std::stoi(readuntilstr(line, ","));
         p.pclass = (Pclass)std::stoi(readuntilstr(line, ",\""));
         p.name = readuntilstr(line, "\",");
@@ -95,7 +147,7 @@ int main()
         	else if (em == "Q") p.embarked = Embarked::Q;
         	else p.embarked = Embarked::S;
 
-        passengers.push_back(p); // добавление заполненой структуры пассажира в вектор
+        passengers.push_back(p);
     }
 
    int calive = 0,
@@ -144,7 +196,7 @@ int main()
     average_female /= female_all; 
     average_male /= male_all; 
 	
-    	if (shtat[shtat_max] < shtat[Q]) shtat_max = Q; // Максимальный штат 
+    	if (shtat[shtat_max] < shtat[Q]) shtat_max = Q; 
     	if (shtat[shtat_max] < shtat[S]) shtat_max = S;
 
     fout << "Общее число выживших:" << calive << '\n'
