Update Лабораторная работа №3.md

--- a/labs/Лабораторная работа №3.md
+++ b/labs/Лабораторная работа №3.md
@@ -36,6 +36,44 @@
 4. Номер исследуемого изображения - ***3***, ключ - ``` *00r 00g 00b 01r 01g 01b 10r 10g*```.<br>![](https://neroid.ru/wp-content/uploads/2020/02/pic3.bmp) </br>
 Код программы:
 ```C++
+#include <iostream>
+#include "libbmp.h"
+using namespace std;
+void bit(int k) {  
+    static int i = 0;
+    static int buff[8];
+    buff[i] = k;
+    i++;
+    if (i == 8) {  
+        char c = 0;
+        for (int i = 7; i >= 0; i--) {
+            c = c | (buff[7 - i] << i);  
+        }
+        if (c == '\0') exit(0); 
+        cout << c;
+        i = 0;
+    }
+}
+int main() 
+{   
+    //00r 00g 00b 01r 01g 01b 10r 10g - key
+    BmpImg img;
+    img.read("pic3.bmp");    
+    int w = img.get_width();
+    int h = img.get_height();  
+    for (int i = 0; i < w; i++)
+    {
+        for (int j = 0; j < h; j++)
+        {
+            int red = img.red_at(i, j);
+            int green = img.green_at(i, j);
+            int blue = img.blue_at(i, j);  
+            bit(1 & red);
+            bit(1 & green);
+            bit(1 & blue);
+        }
+    }
+}
 
 ```
 ### Результат: <br>![](https://sun9-51.userapi.com/AMlOWWJL3CLzVCXnwIIlwAsnOb1uGgV7zsqVMg/DTvuVQ_3CPA.jpg)
