Update Лабораторная работа №3.md

--- a/labs/Лабораторная работа №3.md
+++ b/labs/Лабораторная работа №3.md
@@ -59,11 +59,11 @@ int main()
     //00r 00g 00b 01r 01g 01b 10r 10g - key
     BmpImg img;
     img.read("pic3.bmp");    
-    int w = img.get_width();
-    int h = img.get_height();  
-    for (int i = 0; i < w; i++)
+    int width = img.get_width();
+    int height = img.get_height();  
+    for (int i = 0; i < width; i++)
     {
-        for (int j = 0; j < h; j++)
+        for (int j = 0; j < height; j++)
         {
             int red = img.red_at(i, j);
             int green = img.green_at(i, j);
