Update Лабораторная работа №3.md

--- a/labs/Лабораторная работа №3.md
+++ b/labs/Лабораторная работа №3.md
@@ -41,13 +41,13 @@
 using namespace std;
 void bit(int k) {  
     static int i = 0;
-    static int buff[8];
-    buff[i] = k;
+    static int arr[8];
+    arr[i] = k;
     i++;
     if (i == 8) {  
         char c = 0;
         for (int i = 7; i >= 0; i--) {
-            c = c | (buff[7 - i] << i);  
+            c = c | (arr[7 - i] << i);  
         }
         if (c == '\0') exit(0); 
         cout << c;
