Update Лабораторная работа №2.md

--- a/labs/Лабораторная работа №2.md
+++ b/labs/Лабораторная работа №2.md
@@ -32,7 +32,8 @@
 ### Ход работы: <br>
 Вариант математической задачи - 3.<br>
 
-![](https://sun3.43222.userapi.com/GZBe6oZAAn7ijTPBgJDBv7TTwVpElj51oFhtUg/K9WfRr26EB4.jpg "Рисунок 1")
+![](https://sun3.43222.userapi.com/GZBe6oZAAn7ijTPBgJDBv7TTwVpElj51oFhtUg/K9WfRr26EB4.jpg "Рисунок 1")<br>
+<t><t><t>***Рисунок 1. Вариант задачи***
 
 **Код программы:**
 ```C++
@@ -74,8 +75,10 @@ int main() {
     return 0;
 }
 ```
- ![](https://sun1.43222.userapi.com/2PomPpf92ax4YPwFsn1PwRoEcIw_PUFkLWL9OQ/JisXSmhHPDQ.jpg "Рисунок 2")
+ ![](https://sun1.43222.userapi.com/2PomPpf92ax4YPwFsn1PwRoEcIw_PUFkLWL9OQ/JisXSmhHPDQ.jpg "Рисунок 2")<br>
+ <t><t><t>***Рисунок 2. Результат работы программы***
  
-![](https://sun2.43222.userapi.com/0ksVX4P9m3STCUPDTE6W97-l8t3ZjdW4Z9uF5w/CbXNG6zjDQs.jpg "Рисунок 3.")
+![](https://sun2.43222.userapi.com/0ksVX4P9m3STCUPDTE6W97-l8t3ZjdW4Z9uF5w/CbXNG6zjDQs.jpg "Рисунок 3.")<br>
+<t><t><t>***Рисунок 3. Резлуьтат построения на DESMOS.***
 
 **Вывод:** после выполннения данной лабораторной работы, были преобретены навыки работы с циклами, операторами ветвления, а также математическими функциями.
