Update Лабораторная работа №2.md

--- a/labs/Лабораторная работа №2.md
+++ b/labs/Лабораторная работа №2.md
@@ -76,7 +76,8 @@ int main() {
 }
 ```
  ![](https://sun1.43222.userapi.com/2PomPpf92ax4YPwFsn1PwRoEcIw_PUFkLWL9OQ/JisXSmhHPDQ.jpg "Рисунок 2")<br>
- <t><t><t>***Рисунок 2. Результат работы программы***
+ <t><t><t>***Рисунок 2. Результат работы программы*** <br>
+ Используя сервис https://www.desmos.com/calculator был построен график функции.
  
 ![](https://sun2.43222.userapi.com/0ksVX4P9m3STCUPDTE6W97-l8t3ZjdW4Z9uF5w/CbXNG6zjDQs.jpg "Рисунок 3.")<br>
 <t><t><t>***Рисунок 3. Резлуьтат построения на DESMOS.***
