Update Лабораторная работа №2.md

--- a/labs/Лабораторная работа №2.md
+++ b/labs/Лабораторная работа №2.md
@@ -75,11 +75,12 @@ int main() {
     return 0;
 }
 ```
+<br> После того, как наша программа отработала, в консоли появились такие значения.
  ![](https://sun1.43222.userapi.com/2PomPpf92ax4YPwFsn1PwRoEcIw_PUFkLWL9OQ/JisXSmhHPDQ.jpg "Рисунок 2")<br>
  <t><t><t>***Рисунок 2. Результат работы программы*** <br>
- Используя сервис https://www.desmos.com/calculator был построен график функции.
+ Используя сервис https://www.desmos.com/calculator был построен график функции.<br>
  
 ![](https://sun2.43222.userapi.com/0ksVX4P9m3STCUPDTE6W97-l8t3ZjdW4Z9uF5w/CbXNG6zjDQs.jpg "Рисунок 3.")<br>
-<t><t><t>***Рисунок 3. Резлуьтат построения на DESMOS.***
+<t><t><t>***Рисунок 3. Резлуьтат построения на DESMOS.***<br>
 
 **Вывод:** после выполннения данной лабораторной работы, были преобретены навыки работы с циклами, операторами ветвления, а также математическими функциями.
