--- a/labs/Лабораторная работа №2.md
+++ b/labs/Лабораторная работа №2.md
@@ -75,7 +75,7 @@ int main() {
     return 0;
 }
 ```
-<br> После того, как наша программа отработала, в консоли появились такие значения.
+<br> После того, как наша программа отработала, в консоли появились такие значения.<br>
  ![](https://sun1.43222.userapi.com/2PomPpf92ax4YPwFsn1PwRoEcIw_PUFkLWL9OQ/JisXSmhHPDQ.jpg "Рисунок 2")<br>
  <t><t><t>***Рисунок 2. Результат работы программы*** <br>
  Используя сервис https://www.desmos.com/calculator был построен график функции.<br>
