Update Лабораторная работа №3.md

--- a/labs/Лабораторная работа №3.md
+++ b/labs/Лабораторная работа №3.md
@@ -31,9 +31,13 @@
 
 ### Ход работы: <br>
 1. Для работы с изображением, была установлена [данная](https://github.com/marc-q/libbmp) библиотека.
-2. После установки были произведены некоторые манипуляции, связанные с установкой данной библиотеки, а именно, нажатием правой кнопки мыши был добавлен файл libbmp.cpp в проект.<br>![](https://sun9-27.userapi.com/-4cDLHTa92A_6WMgcd5xOoKjY70xDw66bzEBDQ/G9mh-sn_5XI.jpg)
-3. После, открыв свойства проекта, была добавлена папка *include* <br>![](https://sun1.43222.userapi.com/bhLqy0-_H-f5K1WPO12F6mTzpsWU3WfrWwZpgQ/uuiEFBT9Jt4.jpg)
+2. После установки были произведены некоторые манипуляции, связанные с установкой данной библиотеки, а именно, нажатием правой кнопки мыши был добавлен файл libbmp.cpp в проект.<br>![](https://sun9-27.userapi.com/-4cDLHTa92A_6WMgcd5xOoKjY70xDw66bzEBDQ/G9mh-sn_5XI.jpg)<br>```Рисунок 1. libbmp```<br>
+
+3. После, открыв свойства проекта, была добавлена папка *include* <br>![](https://sun1.43222.userapi.com/bhLqy0-_H-f5K1WPO12F6mTzpsWU3WfrWwZpgQ/uuiEFBT9Jt4.jpg)<br>```Рисунок 2. Исследуемое изображение```<br>
+
 4. Номер исследуемого изображения - ***3***, ключ - ``` *00r 00g 00b 01r 01g 01b 10r 10g*```.<br>![](https://neroid.ru/wp-content/uploads/2020/02/pic3.bmp) </br>
+```Рисунок 3. Исследуемое изображение```<br>
+
 Код программы:
 ```C++
 #include <iostream>
@@ -76,6 +80,6 @@ int main()
 }
 
 ```
-### Результат: <br>![](https://sun9-51.userapi.com/AMlOWWJL3CLzVCXnwIIlwAsnOb1uGgV7zsqVMg/DTvuVQ_3CPA.jpg)
+### Результат: <br>![](https://sun9-51.userapi.com/AMlOWWJL3CLzVCXnwIIlwAsnOb1uGgV7zsqVMg/DTvuVQ_3CPA.jpg)<br>```Рисунок 4. Результат```<br>
 
 **Вывод:** Получен навык дешифровки текста из .bmp формата изображения.
