Update Лабораторная работа №8.md

--- a/labs/Лабораторная работа №8.md
+++ b/labs/Лабораторная работа №8.md
@@ -40,7 +40,7 @@ JDK использовался мной ранее. Чтобы быть спок
 После установки Android Studio, были установлены SDK необходимых версий.<br>
 ![](https://sun2.43222.userapi.com/vE0QBnSjW4mnIRTGQE2QQS_m0sHIOra52AmxRA/_vsCtPmWb5Y.jpg)
 <br>Рис.2. SDK<br>
-Так как Android Studio была установлена ранее, я вручную установил дополнительные компоненты, а именно: NDK.
+Так как Android Studio была установлена ранее и использовалась не в связки с QT, я вручную установил дополнительные компоненты, а именно: NDK, с ![официиального](https://developer.android.com/ndk/downloads/) сайта.
 **Настройка QT**<br>
 Затем был настроен QT, путём подключения JDK, SDK, NDK.<br>
 
