Update Лабораторная работа №8.md

--- a/labs/Лабораторная работа №8.md
+++ b/labs/Лабораторная работа №8.md
@@ -5,7 +5,7 @@
 Кафедра компьютерной инженерии и моделирования
 <br/><br/>
  
-### Отчёт по лабораторной работе № 8 Настройка Qt Creator для разработки приложений под android<br/> по дисциплине "Программирование"
+### Отчёт по лабораторной работе № 8<br/> по дисциплине "Программирование"
 <br/>
  
 студента 1 курса группы ПИ-б-о-192(2)  
@@ -22,8 +22,7 @@
 <br/><br/>
  
 Симферополь, 2019
-
-<br><br><br>
+## Настройка Qt Creator для разработки приложений под android
 ### Цель:
 1. Настроить IDE Qt Creator для разработки приложений под android ОС;
 2. Изучить базовые понятия связанные с мобильной разработкой;
