Update Лабораторная работа №8.md

--- a/labs/Лабораторная работа №8.md
+++ b/labs/Лабораторная работа №8.md
@@ -53,4 +53,4 @@ JDK использовался мной ранее. Чтобы быть спок
 <br> Рис.4. Запуск проекта<br>
 
 ### Вывод:<br>
-В ходе данной лабораторной работы была произведена адаптация QT Creator для создания приложений под Android OC.
+В ходе данной лабораторной работы была произведена адаптация QT Creator для создания приложений под Android OC, а также получены навыки создания и отладки Android приложений на языке C++.
