--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -28,7 +28,7 @@
 * Изучить базовые понятия относящийся к тестированию кода;
 * Научиться тестировать классы в среде разработки Qt Creator.
 ## Ход работы:<br>
-Ссылка на итоговый файл: [*клик*]()<br>
+Ссылка на итоговый файл: [*клик*](https://github.com/kickStranger/programming/tree/master/labs/lab9)<br>
 **Инструменты**<br>
 * IDE Qt Creator;
 * Google Test и Google Mock Framework;
