Update Лабораторная работа №9.md

--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -22,7 +22,7 @@
  
 Симферополь, 2019
 # Тестирование при помощи Google Test Framework<br>
-**Цель:**
+## Цель:
 
 * Познакомиться с Google Test и Google Mock Framework;
 * Изучить базовые понятия относящийся к тестированию кода;
