--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -60,7 +60,7 @@ Google Test и Google Mock Framework - ✓<br>
 **Настройка тестового проекта**<br>
 
 ![](https://sun2.43222.userapi.com/nyf8hi2-Nw6AOQ7fTD9kCcu7jCp5JIBSOS7sEA/P6Etiyw3ECs.jpg)
-<br> Добавление боевого проекта.
+<br> Добавление боевого проекта.<br>
 **Конечный результат**<br>
 ![](https://sun3.43222.userapi.com/SMy5r-Q8333nNbHezQOCfNKbTSllPhcyYBszdg/dkN8rb75Duk.jpg)<br>
 Для фикса ошибки, необходимо изменить метод таким образом<br>
