--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -41,15 +41,15 @@ Google Test и Google Mock Framework - ✓<br>
 
 ![](https://sun3.43222.userapi.com/VefttcERZnN2AizxNx80QrHPXZnLbLV1cgmXyg/-BH-qQmcNG4.jpg)<br>
 Класс для тестирования - ✓<br>
-**Подготовка боевого проекта**<br>
+### Подготовка боевого проекта<br>
 Был скачан [необходимый](https://neroid.ru/wp-content/uploads/2020/05/Lab9_Project_for_tests.zip) архив с такими же необходимыми файлами.<br>
 
-**Создание тестового проекта в Qt Creator**<br>
+### Создание тестового проекта в Qt Creator<br>
 Скачаны [фреймы](https://github.com/google/googletest) Google Test и Google Mock. Создан проект для автотестирования.<br>
 
 ![](https://sun3.43222.userapi.com/Lw36mnIE5SVh_B4CEeMe94uuRs3RTcAHur13Jg/qJMjBALR9dI.jpg)
 
-**Проверяем работоспособность пустого тестового проекта**<br>
+### Провекра работоспособности пустого тестового проекта<br>
 
 ![](https://sun3.43222.userapi.com/AKjZMHW-AReORkuPNTIAjQtjNSP3_gWwCS4CvA/jrAxePVsdfE.jpg)
 Результат тестирования через консоль.<br>
@@ -57,11 +57,11 @@ Google Test и Google Mock Framework - ✓<br>
 ![](https://sun2.43222.userapi.com/HE9u0olyKBZhcLub-1dUN22IvFWmSTVJfflnGw/DAVb6uH2uag.jpg)
 <br> Результат через "Результаты тестирования"
 
-**Настройка тестового проекта**<br>
+### Настройка тестового проекта<br>
 
 ![](https://sun2.43222.userapi.com/nyf8hi2-Nw6AOQ7fTD9kCcu7jCp5JIBSOS7sEA/P6Etiyw3ECs.jpg)
 <br> Добавление боевого проекта.<br>
-**Конечный результат**<br>
+### Конечный результат<br>
 ![](https://sun3.43222.userapi.com/SMy5r-Q8333nNbHezQOCfNKbTSllPhcyYBszdg/dkN8rb75Duk.jpg)<br>
 Для фикса ошибки, необходимо изменить метод таким образом<br>
 ```C++
