--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -29,7 +29,7 @@
 * Научиться тестировать классы в среде разработки Qt Creator.
 ## Ход работы:<br>
 Ссылка на исходные файлы: [*клик*](https://github.com/kickStranger/programming/tree/master/labs/lab9)<br>
-**Инструменты**<br>
+### Инструменты<br>
 * IDE Qt Creator;
 * Google Test и Google Mock Framework;
 * Костюм железного человека Mark 2;
