Update Лабораторная работа №9.md

--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -49,7 +49,7 @@ Google Test и Google Mock Framework - ✓<br>
 
 ![](https://sun3.43222.userapi.com/Lw36mnIE5SVh_B4CEeMe94uuRs3RTcAHur13Jg/qJMjBALR9dI.jpg)
 
-### Провекра работоспособности пустого тестового проекта<br>
+### Проверка работоспособности пустого тестового проекта<br>
 
 ![](https://sun3.43222.userapi.com/AKjZMHW-AReORkuPNTIAjQtjNSP3_gWwCS4CvA/jrAxePVsdfE.jpg)
 Результат тестирования через консоль.<br>
