Update Лабораторная работа №9.md

--- a/labs/Лабораторная работа №9.md
+++ b/labs/Лабораторная работа №9.md
@@ -45,22 +45,23 @@ Google Test и Google Mock Framework - ✓<br>
 ### Создание тестового проекта в Qt Creator<br>
 Скачаны [фреймы](https://github.com/google/googletest) Google Test и Google Mock. Создан проект для автотестирования.<br>
 
-![](https://sun3.43222.userapi.com/Lw36mnIE5SVh_B4CEeMe94uuRs3RTcAHur13Jg/qJMjBALR9dI.jpg)
+![](https://sun3.43222.userapi.com/Lw36mnIE5SVh_B4CEeMe94uuRs3RTcAHur13Jg/qJMjBALR9dI.jpg)<br>
+Рис.1. Процесс создания тест-проекта<br>
 
 ### Проверка работоспособности пустого тестового проекта<br>
 
 ![](https://sun3.43222.userapi.com/AKjZMHW-AReORkuPNTIAjQtjNSP3_gWwCS4CvA/jrAxePVsdfE.jpg)
-Результат тестирования через консоль.<br>
+Рис.2. Результат тестирования через консоль.<br>
 
 ![](https://sun2.43222.userapi.com/HE9u0olyKBZhcLub-1dUN22IvFWmSTVJfflnGw/DAVb6uH2uag.jpg)
-<br> Результат через "Результаты тестирования"
+<br>Рис.4. Результат через "Результаты тестирования"
 
 ### Настройка тестового проекта<br>
 
 ![](https://sun2.43222.userapi.com/nyf8hi2-Nw6AOQ7fTD9kCcu7jCp5JIBSOS7sEA/P6Etiyw3ECs.jpg)
-<br> Добавление боевого проекта.<br>
+<br>Рис.5. Добавление боевого проекта.<br>
 ### Конечный результат<br>
-![](https://sun3.43222.userapi.com/SMy5r-Q8333nNbHezQOCfNKbTSllPhcyYBszdg/dkN8rb75Duk.jpg)<br>
+![](https://sun3.43222.userapi.com/SMy5r-Q8333nNbHezQOCfNKbTSllPhcyYBszdg/dkN8rb75Duk.jpg)<br>Рис.6. Конечный результат.<br>
 Для фикса ошибки, необходимо изменить метод таким образом<br>
 ```C++
 DoorStatus LockController::lockDoor()
